Afegits enunciats i exemples fins acabar la secció de connexió

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -139,6 +139,9 @@
 \newcommand{\convergeixuniformement}{\rightrightarrows}
 \newcommand{\convolucio}{\ast}
 \newcommand{\conjugat}[1]{\overline{#1}}
+\newcommand{\uniodisjunta}{\sqcup}
+\newcommand{\componentconnex}{\mathrm{C}}
+\newcommand{\biguniodisjunts}{\bigsqcup}
 
 \newcommand{\sii}{\iff}
 \newcommand{\implica}{\implies}
