--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -199,6 +199,12 @@
 		\[\int_{a}^{b}f(x)\diff x=\int_{a}^{b}\Re(f(x))\diff x+\iu\int_{a}^{b}\Im(f(x))\diff x\]
 		com la integral de \(f\).
 	\end{definition}
+	\begin{definition}[Unió disjunts]
+		\labelname{unió disjunta}\label{def:unió disjunta}
+		Siguin \(A\) i \(B\) dos conjunts. Aleshores definim
+		\[A\uniodisjunta B=(A\times\{0\})\cup(B\times\{1\})\]
+		com la unió disjunta entre \(A\) i \(B\).
+	\end{definition}
 %	\begin{theorem}[Teorema de la divisió Euclidiana]
 %		\labelname{Teorema de la divisió Euclidiana}\label{thm:divisió euclidiana}
 %	\end{theorem}
