Afegida una bibliografia a topologia i arreglat un detall de la bibliografia de fonaments.

--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1945,7 +1945,7 @@
 %	\section{Els nombres reals}
 %	http://www.math.uni-konstanz.de/~krapp/Constructions_of_the_real_numbers.pdf
 	\printbibliography
-	La secció sobre els axiomes de Peano està fortament inspirada en \cite{notesKumar}. La resta de la teoria és una combinació de \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta} i \cite{TemesFonaments}, uns apunts de l'assignatura que sospito que només són accessibles des del campus virtual.
+	La secció sobre els axiomes de Peano està fortament inspirada en \cite{notesKumar}. La resta de la teoria és una combinació de \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta} i \cite{TemesFonaments}, uns apunts de l'assignatura que sospito que només són accessibles des del campus virtual. La part axiomàtica de la secció de teoria de conjunts està inspirada en \cite{ACTEAguade}, i la resta segueix \cite{TemesFonaments}.
 	
 	La bibliografia del curs inclou els textos \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta, CastelletLlerenaAlgebraLinealIGeometria, GodementAlgebra, NutsAndBoltsOfProofs, BujalanceBujalanceCostaProblemasMatematicaDiscreta, IntroductionToMathematicalReasoning, ChapterZeroSchumacher}.
 \end{document}
