--- a/referencies.bib
+++ b/referencies.bib
@@ -123,7 +123,6 @@
 	language = {Anglès},
 }
 
-
 @unpublished{MondeloApuntsMetodes,
 	author = {Maria Mondelo, Josep},
 	title = {Apunts de Mètodes Numèrics},
@@ -355,5 +354,52 @@
 	publisher = {Dover Publications},
 	year = {1976},
 	isbn = {9780486633176},
+	language = {Anglès},
+}
+
+@online{SchultzFreeActionsOnFiniteGroupsOnHausdorffSpaces,
+	ALTauthor = {Schultz, Reinhard},
+	title = {Free actions of finite groups on Hausdorff spaces},
+	year = {2011},
+	url = {http://math.ucr.edu/~res/math205C-2011/freeactions.pdf},
+	OPTlanguage = {Anglès},
+	OPTurldate = {2019-01-13},
+}
+
+@online{ACTEAguade,
+	ALTauthor = {Aguadé i Bover, Jaume},
+	title = {Apunts d'un curs de Topologia elemental},
+	version = {1.2},
+	year = {2017},
+	url = {http://mat.uab.cat/~aguade/teaching.html},
+	isbn = {ISBN-13: 978-84-697-0541-4},
+	OPTurldate = {2019-01-13},
+}
+
+@Book{AFirstCourseInAlgebraicTopologyKosniowski,
+	author = {Kosniowski, Czes},
+	title = {A first course in algebraic topology},
+	publisher = {Cambridge University Press},
+	year = {1980},
+	isbn = {978-0521298643},
+	language = {Anglès},
+}
+
+@Book{ABasicCourseInAlgebraicTopologyKosniowski,
+	author = {S. Massey, William},
+	title = {A basic course in algebraic topology},
+	publisher = {Springer-Verlag},
+	version = {3rd},
+	year = {1991},
+	isbn = {978-3540974307},
+	language = {Anglès},
+}
+
+@Book{TopologyKlaus,
+	author = {Jänich, Klaus},
+	title = {Topology},
+	publisher = {Springer},
+	year = {1995},
+	isbn = {978-0387908922},
 	language = {Anglès},
 }
