--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -1658,11 +1658,13 @@
 %		és el conjunt de Cantor.
 %	\end{definition}
 
-%	\subsection{Connexió}
 %	\subsection{Varietats}
 %	\subsection{Teorema de classificació de les superfícies compactes}
 	
-%	\printbibliography
+	\printbibliography
+	La majoria del contingut està escrit seguint \cite{ACTEAguade}, que també s'utilitza per les classes de teoria de l'assignatura. He extret la demostració d'un Teorema de \cite{SchultzFreeActionsOnFiniteGroupsOnHausdorffSpaces}.
+	
+	La bibliografia del curs inclou els textos \cite{AFirstCourseInAlgebraicTopologyKosniowski,ABasicCourseInAlgebraicTopologyKosniowski,TopologyKlaus,ACTEAguade}.
 \end{document}
 
 % https://arxiv.org/pdf/0708.2136.pdf (L) Sorprenentment elegant (Espais d'Alexandroff)
