--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -1662,7 +1662,7 @@
 %	\subsection{Teorema de classificació de les superfícies compactes}
 	
 	\printbibliography
-	La majoria del contingut està escrit seguint \cite{ACTEAguade}, que també s'utilitza per les classes de teoria de l'assignatura. He extret la demostració d'un Teorema de \cite{SchultzFreeActionsOnFiniteGroupsOnHausdorffSpaces}.
+	La majoria del contingut està escrit seguint \cite{ACTEAguade}, que també s'utilitza per les classes de teoria de l'assignatura. He extret la demostració d'un Teoremaa de \cite{SchultzFreeActionsOnFiniteGroupsOnHausdorffSpaces}.
 	
 	La bibliografia del curs inclou els textos \cite{AFirstCourseInAlgebraicTopologyKosniowski,ABasicCourseInAlgebraicTopologyKosniowski,TopologyKlaus,ACTEAguade}.
 \end{document}
