Acabada la teoria de connexos a topologia, excepte algunes demostracions

--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -116,7 +116,7 @@
 		\end{proof}
 	\end{tautology}
 	\begin{tautology}[Primera llei de De Morgan]
-		\labelname{llei de De Morgan}\label{taut:primera llei de De Morgan}
+		\labelname{primera llei de De Morgan}\label{taut:primera llei de De Morgan}
 		Siguin \(R\) i \(S\) dues relacions. Aleshores la relació
 		\[\lnot(R\lor S)\sii((\lnot R)\land(\lnot S))\]
 		és vertadera.
@@ -129,7 +129,7 @@
 		\end{proof}
 	\end{tautology}
 	\begin{tautology}[Segona llei de De Morgan]
-		\labelname{llei de De Morgan}\label{taut:segona llei de De Morgan}
+		\labelname{segona llei de De Morgan}\label{taut:segona llei de De Morgan}
 		Siguin \(R\) i \(S\) dues relacions. Aleshores la relació
 		\[\lnot(R\land S)\sii((\lnot R)\lor(\lnot S))\]
 		és vertadera.
