--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -199,7 +199,7 @@
 		\[\int_{a}^{b}f(x)\diff x=\int_{a}^{b}\Re(f(x))\diff x+\iu\int_{a}^{b}\Im(f(x))\diff x\]
 		com la integral de \(f\).
 	\end{definition}
-	\begin{definition}[Unió disjunts]
+	\begin{definition}[Unió disjunta]
 		\labelname{unió disjunta}\label{def:unió disjunta}
 		Siguin \(A\) i \(B\) dos conjunts. Aleshores definim
 		\[A\uniodisjunta B=(A\times\{0\})\cup(B\times\{1\})\]
