Ara hi ha una bibliografia a topologia. Afegida una mica de teoria a la part de la convergència de la transformació de Fourier a anàlisi matemàtica. Acabada la secció de connexió a topologia, excepte per algunes demostracions. Afegida demostració que els espais regulars són Hausdorff i retocada la part dels axiomes de separació de Tychonoff a topologia.

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1257,7 +1257,7 @@
 	\subsection{Convergència d'una sèrie de funcions}
 	\begin{proposition}
 		\label{prop:si una sêrie de funcions convergeix uniformement aleshores la successió de funcions convergeix uniformement a 0}
-		Sigui \(f_{n})_{n\in\mathbb{N}}\) una successió de funcions sobre un interval \(I\) tal que la sèrie de funcions \(\sum_{n=0}^{\infty}f_{n}(x)\) convergeix uniformement en \(I\). Aleshores la successió de funcions \((f_{n})\) convergeix uniformement a \(0\).
+		Sigui \((f_{n})_{n\in\mathbb{N}}\) una successió de funcions sobre un interval \(I\) tal que la sèrie de funcions \(\sum_{n=0}^{\infty}f_{n}(x)\) convergeix uniformement en \(I\). Aleshores la successió de funcions \((f_{n})\) convergeix uniformement a \(0\).
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -1288,7 +1288,7 @@
 	\begin{theorem}[Criteri de Dirichlet]
 		\labelname{criteri de Dirichlet}\label{thm:criteri de Dirichlet}
 		Siguin \((f_{n})_{n\in\mathbb{N}}\) i \((g_{n})_{n\in\mathbb{N}}\) dues successions de funcions sobre un interval \(I\) tals que \(g_{n}(x)\) és monòtona per a tot \(n\) natural, la successió de funcions \((g_{n})\) convergeix uniformement a \(0\) i existeix un real \(M\) tal que
-		\[\sup_{x\in I}\abs{\sum_{n=0}^{\infty}}\leq M\quad\text{per a tot }n\text{ natural}.\]
+		\[\sup_{x\in I}\abs{\sum_{n=0}^{N}g_{n}(x)}\leq M\quad\text{per a tot }N\text{ natural}.\]
 		Aleshores la sèrie de funcions
 		\[\sum_{n=0}^{\infty}f_{n}(x)g_{n}(x)\]
 		és uniformement convergent en \(I\).
@@ -1595,6 +1595,9 @@
 		Siguin \(\alpha\) i \(\beta\) dos reals no negatius i \(p(x)\) un polinomi.
 		Volem estudiar la convergència de la integral
 		\[\int_{0}^{\infty}p(x)\e^{\alpha x^{\beta}}.\]
+		\begin{solution}
+			%TODO
+		\end{solution}
 	\end{example}
 	\begin{theorem}[Criteri de Dirichlet]
 		\labelname{criteri de Dirichlet}\label{thm:criteri de Dirichlet per integrals impròpies}
