--- a/Apunts.tex
+++ b/Apunts.tex
@@ -7,6 +7,7 @@
 \usepackage{subfiles}
 \usepackage{mathtools,amssymb,amsthm}
 \usepackage{microtype}
+\usepackage[mathcal]{euscript}	% hmm
 %\usepackage[framemethod=TikZ]{mdframed}
 \usepackage{tkz-euclide}
 \usetkzobj{all}
@@ -73,7 +74,7 @@
 \newtheorem{theorem}{Teorema}[section]
 \newtheorem{proposition}[theorem]{Proposició}
 \newtheorem{lemma}[theorem]{Lema}
-\newtheorem{corollary}[theorem]{Coro{\lgem}ari}
+\newtheorem{corollary}[theorem]{\Corollari}
 \newtheorem{note}[theorem]{Nota} %Amb la meva veu?
 \newtheorem{observation}[theorem]{Observació} %Per reinterpretacions?
 \newtheorem{example}[theorem]{Exemple}
@@ -159,7 +160,14 @@
 
 \setcounter{MaxMatrixCols}{20}
 
-\newcommand{\corollari}{coro{\lgem}ari }
+\newcommand{\corollari}{coro{\lgem}ari}
+\newcommand{\Corollari}{Coro{\lgem}ari}
+
+\newlength{\ample}
+\setlength{\ample}{1.5pt}
+\newlength{\ampledashed}
+\setlength{\ampledashed}{1.2pt}
+\newcommand{\anglelogos}{337.5}
 
 \newcommand*{\titleTMB}{\begingroup% Three Men in a Boat
 	\vspace*{0.1\textheight}
@@ -174,8 +182,7 @@
 	\rule{\unitlength}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt}
 	\rule{\unitlength}{1.6pt}%\\[\baselineskip]
 	\vfill
-	{\centering
-	\begin{tikzpicture}
+	{\centering\begin{tikzpicture}
 		\tkzDefPoint(0,0){O}
 		\tkzDefPoint(3,0){A}
 		\tkzDefPoint(3.1,0){Alluny}
@@ -227,53 +234,53 @@
 		
 		\tkzFillCircle[color = black](O,Alluny)
 		\tkzFillCircle[color = white](O,A)
+				
+		\tkzDrawPoints[shape=circle,color=black,fill=black](E,M)
 		
-		\tkzDrawSegment(P9,F)
-		\tkzDrawSegment(P7,F)
-		\tkzDrawSegment(P4,F)
-		\tkzDrawSegment(P1,F)
+		\tkzDrawSegment[line width=\ample](P9,F)
+		\tkzDrawSegment[line width=\ample](P7,F)
+		\tkzDrawSegment[line width=\ample](P4,F)
+		\tkzDrawSegment[line width=\ample](P1,F)
 		
-		\tkzDrawSegment(F,A)
-		\tkzDrawSegment(A2,A)
-		\tkzDrawSegment(D2,D)
+		\tkzDrawSegment[line width=\ample](F,A)
+		\tkzDrawSegment[line width=\ample](A2,A)
+		\tkzDrawSegment[line width=\ample](D2,D)
 		
-		\tkzDrawSegment(P_{3},P_{14})
-		\tkzDrawSegment(P_{14},P_{3})
-		\tkzDrawSegment(P_{3},A2)
+		\tkzDrawSegment[line width=\ample](P_{3},P_{14})
+		\tkzDrawSegment[line width=\ample](P_{14},P_{3})
+		\tkzDrawSegment[line width=\ample](P_{3},A2)
 		
-		\tkzDrawCircle(M,H)
-		\tkzDrawCircle(G',J)
+		\tkzDrawCircle[line width=\ample](M,H)
+		\tkzDrawCircle[line width=\ample](G',J)
 		
-		\tkzDrawSegment[dashed](P_{3},P_{0})
-		\tkzDrawSegment[dashed](P_{6},P_{3})
-		\tkzDrawSegment[dashed](P_{9},P_{6})
-		\tkzDrawSegment[dashed](P_{12},P_{9})
-		\tkzDrawSegment[dashed](P_{15},P_{12})
-		\tkzDrawSegment[dashed](P_{1},P_{15})
-		\tkzDrawSegment[dashed](P_{4},P_{1})
-		\tkzDrawSegment[dashed](P_{7},P_{4})
-		\tkzDrawSegment[dashed](P_{10},P_{7})
-		\tkzDrawSegment[dashed](P_{13},P_{10})
-		\tkzDrawSegment[dashed](P_{16},P_{13})
-		\tkzDrawSegment[dashed](P_{2},P_{16})
-		\tkzDrawSegment[dashed](P_{5},P_{2})
-		\tkzDrawSegment[dashed](P_{8},P_{5})
-		\tkzDrawSegment[dashed](P_{11},P_{8})
-		\tkzDrawSegment[dashed](P_{14},P_{11})
-		\tkzDrawSegment[dashed](P_{0},P_{14})
-		
-		\tkzDrawPoints[shape=cross,color=black](E,M)
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{3},P_{0})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{6},P_{3})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{9},P_{6})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{12},P_{9})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{15},P_{12})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{1},P_{15})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{4},P_{1})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{7},P_{4})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{10},P_{7})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{13},P_{10})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{16},P_{13})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{2},P_{16})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{5},P_{2})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{8},P_{5})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{11},P_{8})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{14},P_{11})
+		\tkzDrawSegment[line width=\ampledashed, dashed](P_{0},P_{14})
 		
 		\fontsize{23.5}{23.5}\selectfont
 		\path [postaction={decorate,decoration={text along path, 
 		reverse path,text align=center,
-		text={|\sffamily\color{black}|Universitat Aut{ò}noma de Barcelona}}}] (-30:3cm+0.3em) arc (-30:210:3cm+0.3em);
-		\node[black,rotate=180-338.5-90] at (180-338.5:3cm+0.6em)
-		{\includegraphics[width=0.667em]{imatges/UABLogo.pdf}};
-		\node[black,rotate=338.5-90] at (338.5:3cm+0.6em)%
-		{\includegraphics[width=0.667em]{imatges/UABLogo.pdf}};
+		text={|\sffamily\color{black}|Universitat Aut{ò}noma de Barcelona}}}] (-30:3.1cm+0.3em) arc (-30:210:3.1cm+0.3em);
+		\node[black,rotate=180-\anglelogos-90] at (180-\anglelogos:3.1cm+0.6em)
+		{\includegraphics[width=1em]{UABLogo.pdf}};
+		\node[black,rotate=\anglelogos-90] at (\anglelogos:3.1cm+0.6em)%
+		{\includegraphics[width=1em]{UABLogo.pdf}};
 		\path [postaction={decorate,decoration={text along path, text align=center,
-		text={|\color{black}|Grau en Matem{à}tiques }}}] (210:3cm+0.9em) arc (210:330:3cm+0.9em);
+		text={|\color{black}|Grau en Matem{à}tiques }}}] (210:3.1cm+2ex) arc (210:330:3.1cm+2ex);
 	\end{tikzpicture}}
 	\vfill
 	{\large\scshape Notes de classe}\\[\baselineskip]
