--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -96,12 +96,12 @@
 			\[\bola(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
 			Per tant, si definim \(\varepsilon=\min_{i\in\{1,\dots,n\}}\varepsilon_{i}\). Aleshores per la definició de \myref{def:bola} tenim que
 			\[\bola(x,\varepsilon)\subseteq\bola(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
-			i per tant \(\bola(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert.
+			i per tant \(\bola(x,\varepsilon)\subset\obert{U}\) i per la definició d'\myref{def:obert} tenim que \(\obert{U}\) és un obert.
 			
 			Prenem \(\{\obert{U}_{i}\}_{i\in I}\) una família d'oberts de \(\tau\) i considerem
 			\[\obert{U}=\bigcup_{i\in I}\obert{U}_{i}.\]
 			
-			Sigui \(x\) un element de \(\obert{U}\). Per la definició d'\myref{def:unió de conjunts} tenim que existeix un \(i\in I\) tal que \(\obert{U}_{i}\) conté \(x\). Ara bé, per hipòtesi tenim que \(\obert{U}_{i}\) és un obert, i per la definició d'\myref{def:obert espai mètric} trobem que existeix un \(\varepsilon>0\) tal que \(\bola(x,\varepsilon)\) és un subconjunt de \(\obert{U}_{i}\), i com que \(\obert{U}_{i}\) és un subconjunt de \(\obert{U}\) tenim que \(\bola(x,\varepsilon)\) també és un subconjunt de \(\obert{U}\), i per la definició d'\myref{def:obert espai mètric} trobem que \(\obert{U}\) és un obert, i per la definició de \myref{def:espai topològic} hem acabat.
+			Sigui \(x\) un element de \(\obert{U}\). Per la definició d'\myref{def:unió de conjunts} tenim que existeix un \(i\in I\) tal que \(\obert{U}_{i}\) conté \(x\). Ara bé, per hipòtesi tenim que \(\obert{U}_{i}\) és un obert, i per la definició d'\myref{def:obert espai mètric} trobem que existeix un \(\varepsilon>0\) tal que \(\bola(x,\varepsilon)\) és un subconjunt de \(\obert{U}_{i}\), i com que \(\obert{U}_{i}\) és un subconjunt de \(\obert{U}\) tenim que \(\bola(x,\varepsilon)\) també és un subconjunt de \(\obert{U}\), i per la definició d'\myref{def:obert espai mètric} trobem que \(\obert{U}\) és un obert, i per la definició d'\myref{def:espai topològic} hem acabat.
 		\end{solution}
 	\end{example}
 	\begin{example}[Topologia grollera]
@@ -162,7 +162,7 @@
 				&=\bigcup_{i\in I}\left(X\cap\tancat{C}_{i}^{\complement}\right) \\
 				&=\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right).
 			\end{align*}
-			Ara bé, per la definició de \myref{def:tancat} tenim que per a tot \(i\in I\) el conjunt \(X\setminus\tancat{C}_{i}\) és un obert, i per la definició de \myref{def:espai topològic} trobem que el conjunt \(\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right)\) és un obert. Tenim
+			Ara bé, per la definició de \myref{def:tancat} tenim que per a tot \(i\in I\) el conjunt \(X\setminus\tancat{C}_{i}\) és un obert, i per la definició d'\myref{def:espai topològic} trobem que el conjunt \(\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right)\) és un obert. Tenim
 			\[X\setminus\bigcap_{i\in I}\tancat{C}_{i}=\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right),\]
 			i, de nou per la definició de \myref{def:tancat}, tenim que \(\bigcap_{i\in I}\tancat{C}_{i}\) és un tancat, com volíem veure.
 		\end{proof}
@@ -260,7 +260,7 @@
 		\label{prop:l'interior d'un conjunt és un obert}
 		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(A\) un subconjunt de \(X\). Aleshores \(\interior(A)\) és un obert.
 		\begin{proof}
-			Prenem un element \(x\) de \(\interior(A)\). Per la definició de \myref{def:interior} tenim que existeix un obert \(\obert{U}_{x}\) tal que \(x\in\obert{U}_{x}\) i \(\obert{U}_{x}\subseteq A\). Aleshores tenim
+			Prenem un element \(x\) de \(\interior(A)\). Per la definició d'\myref{def:interior} tenim que existeix un obert \(\obert{U}_{x}\) tal que \(x\in\obert{U}_{x}\) i \(\obert{U}_{x}\subseteq A\). Aleshores tenim
 			\begin{align*}
 				\interior(A)&=\bigcup_{x\in\interior(A)}\{x\} \\
 				&\subseteq\bigcup_{x\in\interior(A)}\obert{U}_{x} \\
@@ -433,7 +433,7 @@
 				\[\tancat{K}=\{f(x)\in\mathbb{R}\mid x\in\tancat{C}\}.\]
 				Tenim que \(\tancat{K}\) és un tancat de \(\mathbb{R}\), ja que si \(y\) és un element de \(\tancat{K}\), aleshores \(y\neq f(x)\) per a tot \(x\) de \(\obert{C}\), i per tant existeix un real \(d>0\) tal que
 				\[d=\min_{x\in\tancat{C}}\abs{f(x)-y},\]
-				i per tant tenim que per a tot \(y\) de \(\mathbb{R}\setminus\tancat{K}\) existeix una bola \(\bola(y,d)\) tal que \(\bola(y,d)\cap\tancat{K}=\emptyset\), i per la definició d'\myref{def:obert espai mètric} trobem que \(\mathbb{R}\setminus\tancat{K}\) és un obert de \(\mathbb{R}\). Aleshores per la definició de \myref{def:tancat} trobem que \(\tancat{K}\) és un tancat, i per la definició de \myref{def:aplicació tancada} trobem que \(f\) és una aplicació tancada.
+				i per tant tenim que per a tot \(y\) de \(\mathbb{R}\setminus\tancat{K}\) existeix una bola \(\bola(y,d)\) tal que \(\bola(y,d)\cap\tancat{K}=\emptyset\), i per la definició d'\myref{def:obert espai mètric} trobem que \(\mathbb{R}\setminus\tancat{K}\) és un obert de \(\mathbb{R}\). Aleshores per la definició de \myref{def:tancat} trobem que \(\tancat{K}\) és un tancat, i per la definició d'\myref{def:aplicació tancada} trobem que \(f\) és una aplicació tancada.
 				
 				Ara bé, tenim que \(\{1\}\) és un tancat de \(\mathbb{R}\)
 			\end{comment}
@@ -442,7 +442,7 @@
 				\label{ex:les esferes són tancats:eq1}
 				\obert{U}=\{x\in\mathbb{R}^{n+1}\mid f(x)\in\obert{V}\}.
 			\end{equation}
-			Prenem un element \(x\) de \(\mathbb{R}^{n+1}\). Com que, per hipòtesi, tenim que \(\obert{V}\) és un obert de \(\mathbb{R}\), per la definició de \myref{def:obert espai mètric} tenim que existeix un real \(\delta>0\) tal que la bola \(\bola(f(x),\delta)\) és un subconjunt de \(\mathbb{R}\), i per la definició \eqref{ex:les esferes són tancats:eq1} tenim que existeix un element \(y\) de \(\mathbb{R}^{n+1}\) tal que \(f(y)\) és un element de \(\bola(f(x),\delta)\), i per la definició de \myref{def:bola} trobem que \(\abs{f(x)-f(y)}<\delta\).
+			Prenem un element \(x\) de \(\mathbb{R}^{n+1}\). Com que, per hipòtesi, tenim que \(\obert{V}\) és un obert de \(\mathbb{R}\), per la definició d'\myref{def:obert espai mètric} tenim que existeix un real \(\delta>0\) tal que la bola \(\bola(f(x),\delta)\) és un subconjunt de \(\mathbb{R}\), i per la definició \eqref{ex:les esferes són tancats:eq1} tenim que existeix un element \(y\) de \(\mathbb{R}^{n+1}\) tal que \(f(y)\) és un element de \(\bola(f(x),\delta)\), i per la definició de \myref{def:bola} trobem que \(\abs{f(x)-f(y)}<\delta\).
 		\end{solution}
 	\end{example}
 	\subsection{Homeomorfismes entre topologies}
@@ -670,7 +670,7 @@
 			\[\obert{U}=\obert{U}_{X}\cup\obert{U}_{Y}\]
 			és un obert de \(Z\). Per tant tenim que
 			\[\obert{U}=\{x\in Z\mid f(x)\in\obert{V}\times\obert{W}\},\]
-			és un obert de \(Z\), i com que per hipòtesi el conjunt \(\obert{V}\times\obert{W}\) és un obert de \(X\times Y\), per la definició de \myref{def:aplicació oberta} trobem que \(f\) és una aplicació oberta. %REVISAR
+			és un obert de \(Z\), i com que per hipòtesi el conjunt \(\obert{V}\times\obert{W}\) és un obert de \(X\times Y\), per la definició d'\myref{def:aplicació oberta} trobem que \(f\) és una aplicació oberta. %REVISAR
 		\end{proof}
 	\end{theorem}
 	\begin{proposition}
@@ -779,7 +779,7 @@
 			
 			Observem primer que si \(\obert{U}=\emptyset\) aleshores
 			\[\Antiima_{\obert{U}}(p)=\emptyset,\]
-			i si \(0\) pertany a \(\obert{U}\) aleshores, per la definició de \myref{def:obert espai mètric} tenim que existeixen un \(x\) de \(\obert{U}\) positiu i un \(y\) de \(\obert{U}\) negatiu, i per tant
+			i si \(0\) pertany a \(\obert{U}\) aleshores, per la definició d'\myref{def:obert espai mètric} tenim que existeixen un \(x\) de \(\obert{U}\) positiu i un \(y\) de \(\obert{U}\) negatiu, i per tant
 			\[\Antiima_{\obert{U}}(p)=\{a,b,c\}.\]
 			Suposem doncs que \(0\) no pertany a \(\obert{U}\).
 			
@@ -936,11 +936,11 @@
 		\begin{proof}
 			Per la definició de \myref{def:relació d'equivalència} tenim que si \(X\cong Y\) aleshores \(Y\cong X\), i per tant només ens cal veure que si \(X\) és compacte aleshores \(Y\) és compacte.
 			
-			Suposem doncs que \(X\) és compacte. Per la definició de \myref{def:espais topològics homeomorfs} tenim que existeix un homeomorfisme \(f\colon X\longrightarrow Y\).
+			Suposem doncs que \(X\) és compacte. Per la definició d'\myref{def:espais topològics homeomorfs} tenim que existeix un homeomorfisme \(f\colon X\longrightarrow Y\).
 			
-			Sigui \(\{\obert{U}_{i}\}_{i\in I}\) un recobriment obert de \(Y\). Per la definició de \myref{def:homeomorfisme entre topologies} i la definició de \myref{def:recobriment obert} tenim que la família \(\{\Antiima_{\obert{U}_{i}}(f)\}_{i\in I}\) és un recobriment obert de \(X\).
+			Sigui \(\{\obert{U}_{i}\}_{i\in I}\) un recobriment obert de \(Y\). Per la definició d'\myref{def:homeomorfisme entre topologies} i la definició de \myref{def:recobriment obert} tenim que la família \(\{\Antiima_{\obert{U}_{i}}(f)\}_{i\in I}\) és un recobriment obert de \(X\).
 			
-			Ara bé, per la definició d'\myref{def:espai topològic compacte} trobem que existeix un subrecobriment finit \(\{\Antiima_{\obert{U}_{j}}(f)\}_{j\in J}\) de \(\{\Antiima_{\obert{U}_{i}}(f)\}_{i\in I}\), i de nou per la definició de \myref{def:homeomorfisme entre topologies} i la definició de \myref{def:recobriment obert} tenim que la família \(\{\obert{U}_{j}\}_{j\in J}\) és un subrecobriment obert de \(\{\obert{U}_{i}\}_{i\in I}\), i per la definició d'\myref{def:espai topològic compacte} trobem que \(Y\) és compacte.
+			Ara bé, per la definició d'\myref{def:espai topològic compacte} trobem que existeix un subrecobriment finit \(\{\Antiima_{\obert{U}_{j}}(f)\}_{j\in J}\) de \(\{\Antiima_{\obert{U}_{i}}(f)\}_{i\in I}\), i de nou per la definició d'\myref{def:homeomorfisme entre topologies} i la definició de \myref{def:recobriment obert} tenim que la família \(\{\obert{U}_{j}\}_{j\in J}\) és un subrecobriment obert de \(\{\obert{U}_{i}\}_{i\in I}\), i per la definició d'\myref{def:espai topològic compacte} trobem que \(Y\) és compacte.
 		\end{proof}
 	\end{proposition}
 	\begin{example}
@@ -1173,17 +1173,17 @@
 		\label{prop:els subespais d'un Hausdorff són Hausdorff}
 		Sigui \(X\) un espai Hausdorff i \(A\) un subespai de \(X\). Aleshores \(A\) és Hausdorff.
 		\begin{proof}
-			Siguin \(x\) i \(y\) dos elements diferents de \(A\). Aleshores per la definició d'espai Hausdorff tenim que existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) de \(X\) tals que \(x\) pertany a \(\obert{U}\) i \(y\) pertany a \(\obert{V}\). Aleshores per la definició de \myref{def:topologia induida per un subconjunt} trobem que els conjunts \(\obert{U}\cap A\) i \(\obert{V}\cap A\) són oberts disjunts de \(A\) que contenen \(x\) i \(y\), respectivament, i per la definició de \myref{def:espai Hausdorff} hem acabat.
+			Siguin \(x\) i \(y\) dos elements diferents de \(A\). Aleshores per la definició d'espai Hausdorff tenim que existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) de \(X\) tals que \(x\) pertany a \(\obert{U}\) i \(y\) pertany a \(\obert{V}\). Aleshores per la definició de \myref{def:topologia induida per un subconjunt} trobem que els conjunts \(\obert{U}\cap A\) i \(\obert{V}\cap A\) són oberts disjunts de \(A\) que contenen \(x\) i \(y\), respectivament, i per la definició d'\myref{def:espai Hausdorff} hem acabat.
 		\end{proof}
 	\end{proposition}
 	\subsection{Axiomes de separació de Tychonoff}
 	\begin{definition}[Espai de Kolmogorov]
 		\labelname{espai de Kolmogorov}\label{def:espai de Kolmogorov}
-		Sigui \(X\) un espai topològic tal que per a tots dos punts diferents \(x\) i \(y\) existeix un obert tal que \(\obert{U}\) o bé conté \(x\) i no \(y\) o bé conté \(y\) i no \(x\). Aleshores direm que \(X\) és un espai de Kolmogorov.
+		Sigui \(X\) un espai topològic tal que per a tots dos punts diferents \(x\) i \(y\) existeix un obert \(\obert{U}\) que o bé conté \(x\) i no \(y\), o bé conté \(y\) i no \(x\). Aleshores direm que \(X\) és un espai de Kolmogorov.
 	\end{definition}
 	\begin{definition}[Espai de Fréchet]
 		\labelname{espai de Fréchet}\label{def:espai de Fréchet}
-		Sigui \(X\) un espai topològic tal que per a tots dos punts diferents \(x\) i \(y\) existeixen dos oberts \(\obert{U}\) i \(\obert{V}\) tals que \(x\) pertany a \(\obert{U}\setminus\obert{V}\) i \(y\) pertany a \(\obert{V}\setminus\obert{U}\).
+		Sigui \(X\) un espai topològic tal que per a tots dos punts diferents \(x\) i \(y\) existeixen dos oberts \(\obert{U}\) i \(\obert{V}\) tals que \(x\) pertany a \(\obert{U}\setminus\obert{V}\) i \(y\) pertany a \(\obert{V}\setminus\obert{U}\). Aleshores direm que \(X\) és un espai de Fréchet.
 	\end{definition}
 	\begin{proposition}
 		\label{prop:els espais de Fréchet són de Kolmogorov}
@@ -1218,10 +1218,11 @@
 			Tenim que \(x\) no pertany a \(\obert{V}\), ja que \(x\) no pertany a cap dels \(\obert{V}_{y}\), i tenim que
 			\begin{align*}
 				X\setminus\{x\}&\subseteq\bigcup_{y\in X\setminus\{x\}}\{y\} \\
-				&\subseteq\bigcup_{y\in X\setminus\{x\}}\obert{V}_{y}\subseteq X\setminus\{x\},
+				&\subseteq\bigcup_{y\in X\setminus\{x\}}\obert{V}_{y}\\
+				&=\obert{V}\subseteq X\setminus\{x\},
 			\end{align*}
 			i pel \myref{thm:doble inclusió} trobem que
-			\[\obert{V}=\subseteq X\setminus\{x\}.\]
+			\[\obert{V}=X\setminus\{x\}.\]
 			
 			Per la definició de \myref{def:topologia} i \eqref{prop:en un espai de Fréchet els punts són tancats:eq1} trobem que \(\obert{V}\) és un obert, i per la definició de \myref{def:tancat}  trobem que \(\{x\}\) és un tancat.
 		\end{proof}
@@ -1230,6 +1231,12 @@
 		\labelname{espai regular}\label{def:espai regular}
 		Sigui \(X\) un espai de Fréchet tal que donats un tancat \(\tancat{C}\) i un punt \(x\) que no pertany a \(\tancat{C}\) existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) tals que \(x\) pertany a \(\obert{U}\) i \(\tancat{C}\) és un subconjunt de \(\obert{V}\). Aleshores direm que \(X\) és un espai regular.
 	\end{definition}
+	\begin{proposition}
+		Sigui \(X\) un espai regular. Aleshores \(X\) és un espai Hausdorff.
+		\begin{proof}
+			Prenem dos punts diferents \(x\) i \(y\) de \(X\). Com que, per hipòtesi, \(X\) és un espai regular, i per la definició d'\myref{def:espai regular} trobem que \(X\) és un espai de Fréchet, per la proposició \myref{prop:en un espai de Fréchet els punts són tancats} trobem que \(\{y\}\) és un tancat, i per la definició d'\myref{def:espai regular} trobem que existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) tals que \(x\) pertany a \(\obert{U}\) i \(\{y\}\) és un subconjunt de \(\obert{V}\), i en particular \(y\) pertany a \(\obert{V}\). Aleshores per la definició d'\myref{def:espai Hausdorff} hem acabat.
+		\end{proof}
+	\end{proposition}
 	\begin{definition}[Espai normal]
 		\labelname{espai normal}\label{def:espai normal}
 		Sigui \(X\) un espai de Fréchet tal que donats dos tancats disjunts \(\tancat{C}\) i \(\tancat{K}\) existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) tals que \(\tancat{C}\) és un subconjunt de \(\obert{U}\) i \(\tancat{K}\) és un subconjunt de \(\obert{V}\). Aleshores direm que \(X\) és un espai normal.
@@ -1238,7 +1245,7 @@
 		\label{prop:els espais normals són espais regulars}
 		Sigui \(X\) un espai normal. Aleshores \(X\) és un espai regular.
 		\begin{proof}
-			Sigui \(\tancat{C}\) un tancat de \(X\) i \(x\) un punt de \(X\setminus\tancat{C}\). Com que per hipòtesi \(X\) és un espai normal, per la definició d'\myref{def:espai normal} trobem que \(X\) és un espai de Fréchet, i per la proposició \myref{prop:en un espai de Fréchet els punts són tancats} trobem que el conjunt \(\{x\}\) és un tancat, i tenim que \(\{x\}\) i \(\tancat{C}\) són disjunts.
+			Siguin \(\tancat{C}\) un tancat de \(X\) i \(x\) un punt de \(X\setminus\tancat{C}\). Com que per hipòtesi \(X\) és un espai normal, per la definició d'\myref{def:espai normal} trobem que \(X\) és un espai de Fréchet, i per la proposició \myref{prop:en un espai de Fréchet els punts són tancats} trobem que el conjunt \(\{x\}\) és un tancat, i tenim que \(\{x\}\) i \(\tancat{C}\) són disjunts.
 			
 			Ara bé, per la definició d'\myref{def:espai normal} trobem que existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) tals que \(\{x\}\) és un subconjunt de \(\obert{U}\) i \(\tancat{C}\) és un subconjunt de \(\obert{V}\). Aleshores tenim que \(x\) pertany a \(\obert{U}\), i per la definició d'\myref{def:espai regular} trobem que \(X\) és un espai regular.
 		\end{proof}
@@ -1291,7 +1298,7 @@
 			
 			La demostració per veure que \(Y\) és Hausdorff és anàloga.
 			
-			Veiem ara que la condició és necessària. Suposem doncs que \(X\) i \(Y\) són Hausdorff. Prenem dos punts diferents \((x_{1},y_{1})\) i \((x_{2},y_{2})\) de \(X\times Y\). Si \(y_{1}=y_{2}\) tenim per la proposició \myref{prop:parelles ordenades} que \(x_{1}\neq x_{2}\). Com que, per hipòtesi, \(X\) és Hausdorff tenim per la definició d'\myref{def:espai Hausdorff} que existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) tals que \(x_{1}\) pertany a \(\obert{U}\) i \(x_{2}\) pertany a \(\obert{V}\). Aleshores per la definició de \myref{def:topologia producte} i la definició de \myref{def:topologia} trobem que els conjunts \((\obert{U},Y)\) i \((\obert{V},Y)\) són oberts disjunts de \(X\times Y\) i per la definició de \myref{def:espai Hausdorff} tenim que \(X\times Y\) és Hausdorff.
+			Veiem ara que la condició és necessària. Suposem doncs que \(X\) i \(Y\) són Hausdorff. Prenem dos punts diferents \((x_{1},y_{1})\) i \((x_{2},y_{2})\) de \(X\times Y\). Si \(y_{1}=y_{2}\) tenim per la proposició \myref{prop:parelles ordenades} que \(x_{1}\neq x_{2}\). Com que, per hipòtesi, \(X\) és Hausdorff tenim per la definició d'\myref{def:espai Hausdorff} que existeixen dos oberts disjunts \(\obert{U}\) i \(\obert{V}\) tals que \(x_{1}\) pertany a \(\obert{U}\) i \(x_{2}\) pertany a \(\obert{V}\). Aleshores per la definició de \myref{def:topologia producte} i la definició de \myref{def:topologia} trobem que els conjunts \((\obert{U},Y)\) i \((\obert{V},Y)\) són oberts disjunts de \(X\times Y\) i per la definició d'\myref{def:espai Hausdorff} tenim que \(X\times Y\) és Hausdorff.
 			
 			Si \(x_{1}=x_{2}\) tenim de nou per la proposició \myref{prop:parelles ordenades} que \(y_{1}\neq y_{2}\) i l'argument per veure que \(X\times Y\) és Hausdorff és anàleg.
 		\end{proof}
@@ -1299,14 +1306,14 @@
 	\begin{theorem}
 		Siguin \(X\) un espai compacte, \(Y\) un espai Hausdorff i \(f\colon X\longrightarrow Y\) una aplicació contínua i bijectiva. Aleshores \(X\cong Y\).
 		\begin{proof}
-			per la definició d'\myref{def:espais topològics homeomorfs} en tenim prou amb veure que \(f\) és un homeomorfisme, i per la definició d'\myref{def:homeomorfisme entre topologies} en tenim prou amb veure que \(f\) és una aplicació tancada. Sigui \(\tancat{C}\) un tancat de \(X\). Com que, per hipòtesi, \(X\) és un compacte, pel Teorema \myref{thm:un tancat en un compacte és compacte} trobem que \(\tancat{C}\) és un compacte. Per hipòtesi tenim també que \(f\) és contínua, i pel teorema \myref{thm:la imatge d'un compacte per una aplicació contínua és un compacte} trobem doncs que \(\Ima_{\tancat{C}}(f)\) és un compacte de \(Y\). De nou per hipòtesi tenim que \(Y\) és Hausdorff i per la proposició \myref{prop:els compactes en un Hausdorff són tancats} trobem que \(\Ima_{\tancat{C}}(f)\) és un tancat de \(Y\). Per tant per la definició de \myref{def:aplicació tancada} trobem que \(f\) és tancada i hem acabat.
+			per la definició d'\myref{def:espais topològics homeomorfs} en tenim prou amb veure que \(f\) és un homeomorfisme, i per la definició d'\myref{def:homeomorfisme entre topologies} en tenim prou amb veure que \(f\) és una aplicació tancada. Sigui \(\tancat{C}\) un tancat de \(X\). Com que, per hipòtesi, \(X\) és un compacte, pel Teorema \myref{thm:un tancat en un compacte és compacte} trobem que \(\tancat{C}\) és un compacte. Per hipòtesi tenim també que \(f\) és contínua, i pel teorema \myref{thm:la imatge d'un compacte per una aplicació contínua és un compacte} trobem doncs que \(\Ima_{\tancat{C}}(f)\) és un compacte de \(Y\). De nou per hipòtesi tenim que \(Y\) és Hausdorff i per la proposició \myref{prop:els compactes en un Hausdorff són tancats} trobem que \(\Ima_{\tancat{C}}(f)\) és un tancat de \(Y\). Per tant per la definició d'\myref{def:aplicació tancada} trobem que \(f\) és tancada i hem acabat.
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}
 		\label{thm:els espais Hausdorff compactes són espais normals}
 		Sigui \(X\) un espai Hausdorff compacte. Aleshores \(X\) és un espai normal.
 		\begin{proof} % Llegir. L'he copiat com un loro
-			Siguin \(\tancat{C}\) i \(\tancat{K}\) dos tancats disjunts i fixem un punt \(x\) de \(\tancat{C}\). Com que, per hipòtesi, \(X\) és Hausdorff, per la definició de \myref{def:espai Hausdorff} trobem que per a tot \(y\) de \(\tancat{K}\) existeixen dos oberts disjunts \(\obert{U}_{x,y}\) i \(\obert{V}_{x,y}\) tals que \(x\) pertany a \(\obert{U}_{x,y}\) i \(y\) pertany a \(\obert{V}_{x,y}\). Tenim doncs que
+			Siguin \(\tancat{C}\) i \(\tancat{K}\) dos tancats disjunts i fixem un punt \(x\) de \(\tancat{C}\). Com que, per hipòtesi, \(X\) és Hausdorff, per la definició d'\myref{def:espai Hausdorff} trobem que per a tot \(y\) de \(\tancat{K}\) existeixen dos oberts disjunts \(\obert{U}_{x,y}\) i \(\obert{V}_{x,y}\) tals que \(x\) pertany a \(\obert{U}_{x,y}\) i \(y\) pertany a \(\obert{V}_{x,y}\). Tenim doncs que
 			\begin{align*}
 				\tancat{K}&=\bigcup_{y\in\tancat{K}}\{y\} \\
 				&\subseteq\bigcup_{y\in\tancat{K}}\obert{V}_{x,y},
@@ -1369,7 +1376,7 @@
 	\end{theorem}
 %	\section{La topologia de Zariski}
 %	\subsection{Propietats de la topologia de Zariski}
-	\chapter{Classificació dels espais topològics}
+	\chapter{Espais connexos}
 	\section{Connexió}
 	\subsection{Els espais connexos}
 	\begin{proposition}
@@ -1643,7 +1650,7 @@
 %		\begin{proof}
 %			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\obert{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\obert{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\bola(y,\varepsilon)\subset\Ima_{\obert{U}}(f^{-1})\).
 %			
-%			Prenem un element \(x'\) de \(\bola(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(\distancia(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(\distancia'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\bola(y,\varepsilon)\). Per tant tenim que \(\Ima_{\bola(x,\delta)}(f)\subset\bola(y,\varepsilon)\) i trobem que \(\bola(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició de \myref{def:obert espai mètric} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
+%			Prenem un element \(x'\) de \(\bola(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(\distancia(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(\distancia'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\bola(y,\varepsilon)\). Per tant tenim que \(\Ima_{\bola(x,\delta)}(f)\subset\bola(y,\varepsilon)\) i trobem que \(\bola(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició d'\myref{def:obert espai mètric} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
 %			
 %			Veiem ara que la condició és suficient (\(\implicatper\)). Suposem doncs que per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 %			
